added docker image

--- a/test.ipynb
+++ b/test.ipynb
@@ -4182,8 +4182,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0a5a8696",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "b'Empty username or password. d2e1a72fcca58-82377f66773mb263620395b3a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m PASSWORD \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      8\u001b[0m mail \u001b[38;5;241m=\u001b[39m imaplib\u001b[38;5;241m.\u001b[39mIMAP4_SSL(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mimap.gmail.com\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m mail\u001b[38;5;241m.\u001b[39mlogin(EMAIL, PASSWORD)\n\u001b[1;32m     10\u001b[0m mail\u001b[38;5;241m.\u001b[39mselect(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m[Gmail]/Sent Mail\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     12\u001b[0m status, messages \u001b[38;5;241m=\u001b[39m mail\u001b[38;5;241m.\u001b[39msearch(\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mALL\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.13/imaplib.py:621\u001b[0m, in \u001b[0;36mIMAP4.login\u001b[0;34m(self, user, password)\u001b[0m\n\u001b[1;32m    619\u001b[0m typ, dat \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_simple_command(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLOGIN\u001b[39m\u001b[38;5;124m'\u001b[39m, user, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_quote(password))\n\u001b[1;32m    620\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m typ \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOK\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m--> 621\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39merror(dat[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m    622\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstate \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAUTH\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    623\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m typ, dat\n",
+      "\u001b[0;31merror\u001b[0m: b'Empty username or password. d2e1a72fcca58-82377f66773mb263620395b3a'"
+     ]
+    }
+   ],
+   "source": [
+    "import imaplib\n",
+    "import email\n",
+    "from email.utils import getaddresses\n",
+    "\n",
+    "EMAIL = \"prathameshshete609@gmail.com\"\n",
+    "PASSWORD = \"\"\n",
+    "\n",
+    "mail = imaplib.IMAP4_SSL(\"imap.gmail.com\")\n",
+    "mail.login(EMAIL, PASSWORD)\n",
+    "mail.select('\"[Gmail]/Sent Mail\"')\n",
+    "\n",
+    "status, messages = mail.search(None, \"ALL\")\n",
+    "\n",
+    "email_ids = set()\n",
+    "\n",
+    "for num in messages[0].split():\n",
+    "    status, msg_data = mail.fetch(num, \"(RFC822)\")\n",
+    "    msg = email.message_from_bytes(msg_data[0][1])\n",
+    "\n",
+    "    to_addresses = msg.get(\"To\")\n",
+    "    if to_addresses:\n",
+    "        for name, addr in getaddresses([to_addresses]):\n",
+    "            email_ids.add(addr)\n",
+    "\n",
+    "mail.logout()\n",
+    "\n",
+    "print(\"Emails you sent mail to:\")\n",
+    "for e in email_ids:\n",
+    "    print(e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "25245476",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"sent_email_ids.txt\", \"w\") as f:\n",
+    "    for e in email_ids:\n",
+    "        f.write(e + \"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa24209b",
    "metadata": {},
    "outputs": [],
    "source": []
